--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 language: php
 
-env:
-  - OPCODE_CACHE=apc
-
 php:
   - 5.3
+  - 5.4
+  - :5.5
 
 before_script:
-  - composer install --dev
+  - composer install
 
 services:
   - elasticsearch
