--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
 
     "require": {
         "php": ">=5.3.8",
-        "beberlei/assert": "dev-master",
+        "beberlei/assert": "1.*",
         "ruflin/elastica": "v0.90.5.0"
     },
     "require-dev": {
