--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
 
     "require": {
         "php": ">=5.3.8",
-        "beberlei/assert": "1.*",
+        "beberlei/assert": "~1.5",
         "ruflin/elastica": "v0.90.5.0"
     },
     "require-dev": {
